--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ img{
 
 </style>
 <div class="image-container">
-    <img src="../images/Tokyo.jpg" class="centered-image"/>
+    <img src="assets/images/Tokyo.jpg" class="centered-image"/>
  </div>
   <section>
     <p>Mustawa is the act of leveling up and taking astute chances to accomplish the 
