--- a/contact.html
+++ b/contact.html
@@ -29,14 +29,14 @@ h1{
   </br>
 
 <style>
-   h2 {text-align:left ;}
-  p {text-align: left;}
-  div {text-align: left;}
+   h2 {text-align: center;}
+  p {text-align: center;}
+ 
 </style>
 
 <main>
   <div>
-<h2>Contact Us</h1>
+<h2>Contact Us</h2>
 <p><b>Email:</b> info@mustawa.online</p>
 <p><b>Address:</b></p>
 <p>
