--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ img{
   <style>
       h4 {text-align: center;
       font-size: 9px;
+       padding: 60px;   
       }
     </style>
   <footer>
@@ -63,16 +64,8 @@ img{
 </html>
 
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+
