--- a/about.html
+++ b/about.html
@@ -5,13 +5,17 @@
 h1{
   color:rgb(122, 104, 21);
 }
-
+h2{text-align: center;}
 </style> 
-<H1>Mustawa Short Fourm</H1>
+<head>
+    <h1>Mustawa Short Fourm</h1>
 </head>
+
 <nav>
   <style>
-   h3 {text-align: center;}
+   h3 {display: flex;
+      justify-content: center;
+       gap: 2rem;}
    p {text-align: center;}
    div {text-align: center;} 
    
@@ -24,15 +28,23 @@ h1{
      </h3>
 </nav>
 
-
-
-
 <h1>Mustawa</h1>
 <h2>Agile Investor</h2>
+
+
 <style>
-  h2{text-align: center;}
+ .container {
+   display: flex;
+   margin-left: 10rem;
+   margin-right: 10rem;
+   justify-content: center;
+   gap: 4rem;
+ }
+
+
 </style>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
+    <div class="container">
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
   elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
   Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
   Etiam
@@ -51,12 +63,16 @@ h1{
   interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
   nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
   neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
-
+</div>
   <br>
   </br>
 
 <style>
-      h4 {text-align: center;}
+      h4 {text-align: center;
+      font-size: 9px;
+      padding: 10rem;
+      clear: both;
+}
       
     </style>
   <footer>
