--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,9 @@ h1{
 </head>
 <nav>
   <style>
-   h3 {text-align: center;}
+   h3 {display: flex;
+      justify-content: center;
+       gap: 2rem;}
    p {text-align: center;}
    div {text-align: center;} 
    
@@ -29,14 +31,13 @@ h1{
   </br>
 
 <style>
-   h2 {text-align: center;}
+   h2 {text-align:center ;}
   p {text-align: center;}
- 
 </style>
 
 <main>
   <div>
-<h2>Contact Us</h2>
+  <h2>Contact Us</h2>
 <p><b>Email:</b> info@mustawa.online</p>
 <p><b>Address:</b></p>
 <p>
@@ -50,6 +51,7 @@ h1{
 <style>
   h4 {text-align: center;
   font-size: 9px;
+  padding: 60px;
   }
 <br>
    </br>
@@ -64,4 +66,4 @@ h1{
 
 
 
-​
+​​
